k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ahmed154/posts-api:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 500m
