k8s/mongo.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongo

spec:
  clusterIP: None

  selector:
    app: mongo

  ports:
    - port: 27017

---

apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongo

spec:
  serviceName: mongo
  replicas: 3

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:
        - name: mongo

          image: mongo:7

          command:
            - mongod
            - "--replSet"
            - rs0
            - "--bind_ip_all"

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-data
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongo-data

      spec:
        storageClassName: gp2
        accessModes: ["ReadWriteOnce"]

        resources:
          requests:
            storage: 1Gi
